# hearsay

./: Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
benches/: messaging.rs
demo/: Cargo.toml  README.md
demo-nightshade/: Cargo.toml
demo-nightshade-leptos/: Cargo.toml  README.md  index.html
demo-nightshade-leptos/.github/workflows/: pages.yml
demo-nightshade-leptos/desktop/: Cargo.toml
demo-nightshade-leptos/desktop/src/: main.rs
demo-nightshade-leptos/protocol/src/: lib.rs
demo-nightshade-leptos/public/: styles.css
demo-nightshade-leptos/src/: app.rs  bridge.rs  components.rs  hearsay_link.rs  lib.rs  shell.rs  state.rs  themes.rs
demo-nightshade-leptos/src/components/: api_panel.rs  hud.rs  loader.rs  modals.rs  template_panel.rs  toasts.rs  top_bar.rs  viewport.rs
demo-nightshade-leptos/worker/: Cargo.toml
demo-nightshade-leptos/worker/src/: ecs.rs  lib.rs  state.rs
demo-nightshade-leptos/worker/src/ecs/: components.rs  resources.rs
demo-nightshade-leptos/worker/src/systems/: example.rs  picking.rs  setup.rs
demo-nightshade/src/: api_panel.rs  app.rs  broker.rs  chrome.rs  filesystem.rs  main.rs  messages.rs  modal_service.rs  rpc.rs  settings.rs  shell.rs  themes.rs  tiles.rs  widget.rs
demo/docs/: ARCHITECTURE.md
demo/src/: api.rs  main.rs  services.rs  ui.rs
demo/src/services/: broker.rs  filesystem.rs  fps.rs  modal.rs  notification.rs  settings.rs  shell.rs  theme.rs  tiles.rs
demo/src/services/tiles/: behavior.rs  ui.rs
demo/src/ui/: rpc.rs  widgets.rs
demo/src/ui/widgets/: template.rs
docs/: ARCHITECTURE.md  BATCHING.md  BROKER.md  CLIENT.md  CONTRACTS.md  LIFECYCLE.md  SPAWN.md  WEBSOCKETS.md
examples/: pingpong.rs
src/: batch.rs  bridge.rs  broker.rs  client.rs  contract.rs  lib.rs  lifecycle.rs  spawn.rs  websocket.rs  wire.rs
tests/: batch.rs  bridging.rs  contract.rs  pubsub.rs  spawn.rs  websocket.rs
