[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
bevy_egui = "0.33.0"
dirs = "5.0"
egui_tiles = { version = "0.12.0", features = ["serde"] }
enum2contract = "0.3"
enum2egui = "0.3.11"
enum2str = "0.1.18"
futures-lite = "2.6.0"
rfd = "0.15.3"
serde = "1.0"
serde_json = "1.0"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
uuid = { version = "1.7", features = ["v4"] }

egui-toast = { version = "0.16.1", git = "https://github.com/matthewjberger/egui-toast.git", branch = "main" }

hearsay = { path = "..", features = ["spawn"] }
